tests/ui/de-field-attr-from-and-try-from-on-single-line.rs
use deserr::Deserr;

#[derive(Deserr)]
struct UnitStruct {
    #[deserr(from(String) = usize::FromStr, try_from(String) = String::parse -> usize)]
    hello: usize,
}

fn main() {}
